First-Day-Complete

--- a/day-1.html
+++ b/day-1.html
@@ -16,7 +16,7 @@
       templates here.</a>
   </p>
 
-  <p>We know about variables. We know about Strings. We will now learn about But how to we put them together?</p>
+  <p>Weut how to we put them together?</p> know about variables. We know about Strings. We will now learn about B
   <p> We use backticks and ${ }. Have a look at an example</p>
 
   <h2>Example 1</h2>
@@ -76,6 +76,12 @@
   <h2>Try it!</h2>
   <p>Now you try it!</p>
   <p>Make at least 5 more examples of templates yourself.</p>
+  <p>
+     <scipt>
+      let 
+     </scipt>
+  
+  </p>
 
 
 </body>
