Next-two-Sections

--- a/day-2b.html
+++ b/day-2b.html
@@ -19,11 +19,13 @@
   <p>Ask for the user's favorite ice cream flavor. And write a message about it.</p>
   <script>
     let favIceCream;
+    favIceCream = prompt("What is your favorite Ice cream flavor?")
+    document.write(`Oh, ${favIceCream} is a great one.`)
     // try it! prompt for favorite ice cream
 
 
     // try it! Write a message about the favorite ice cream flavor.
-    document.write();
+    document.write(`So ${userName}, When do you enjoy ${favIceCream} the most?`);
   </script>
 </body>
 </html>
