--- a/day-2a.html
+++ b/day-2a.html
@@ -28,7 +28,7 @@
         let dogName;
         dogName = prompt("What is the name of your dog?");
         // Try it! Write a message about the dog's name!
-        document.write();
+        document.write(`Can I pet ${dogName}`);
       </script>
     </p>
   </section>
@@ -39,7 +39,7 @@
 
     <script>
       // Try it! Write a message using both variables: userName and dogsName, from above.
-      document.write();
+      document.write(`Can ${userName} play with ${dogName}?`);
     </script>
   </p>
 
