--- a/day-2c.html
+++ b/day-2c.html
@@ -11,13 +11,22 @@
 <body>
   <h1>Day 2 Part C</h1>
   <h3>You Try it!</h3>
-  <p>Ask the user two questions using propmt. Then give the user a personalized response using the data entered.</p>
+  <p>Ask the user two questions using prompt. Then give the user a personalized response using the data entered.</p>
   <script>
+    let UserName;
+    userName = prompt("What would you like you're username to be?")
+    document.write(` Wow ${userName} that is and amazing choice.`)
 
 
 
   </script>
-
+<p>
+  <script>
+    let whereIsYourLoca;
+    whatIsYourLoca = prompt("Where are you located?")
+    document.write(`I hear ${whatIsYourLoca} Is nice.`)
+  </script>
+</p>
 </body>
 
 </html>
